--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "dotenv": "^16.4.0",
     "firebase": "^8.3.1",
+    "gsap": "^3.12.5",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
