--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.0",
     "firebase": "^8.3.1",
     "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
