--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-calendly": "^4.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
