--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.0",
     "firebase": "^8.3.1",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.1.9",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
