--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-react-parser": "^5.1.9",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "pdfkit": "^0.15.0",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
